[package]
name = "discord-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Simple Discord API Client"
documentation = "https://github.com/m1ngru1huang/discord-client/blob/main/README.md"
homepage = "https://github.com/m1ngru1huang/discord-client/blob/main/README.md"
readme = "README.md"
repository = "https://github.com/m1ngru1huang/discord-client"
keywords = ["discord", "client", "api"]
categories = ["client", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secrecy = "0.8.0"
thiserror = "1.0.48"
reqwest = {version = "0.11.20", features = ["json"]}
tracing = "0.1.37"
serde = "1.0.188"
serde_json = "1.0.107"
